--- a/01B - Intro to the Azure ML SDK.ipynb
+++ b/01B - Intro to the Azure ML SDK.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to the Azure ML SDK\n",
+    "# Azure ML SDKの概要\n",
     "\n",
-    "Azure Machine Learning (*Azure ML*) is a cloud-based service for creating and managing machine learning solutions. It's designed to help data scientists leverage their existing data processing and model development skills and frameworks, and help them scale their workloads to the cloud. The Azure ML SDK for Python provides classes you can use to work with Azure ML in your Azure subscription.\n",
+    "Azure Machine Learning（*Azure ML*）は、機械学習ソリューションを作成および管理するためのクラウドベースのサービスです。データサイエンティストが既存のデータ処理とモデル開発のスキルとフレームワークを活用し、ワークロードをクラウドに拡張できるように設計されています。 Python用Azure ML SDKは、AzureサブスクリプションでAzure MLを操作するために使用できるクラスを提供します。\n",
     "\n",
-    "## Check the Azure ML SDK Version\n",
+    "## Azure ML SDKバージョンを確認する\n",
     "\n",
-    "Let's start by importing the **azureml-core** package and checking the version of the SDK that is installed."
+    "**azureml-core**パッケージをインポートし、インストールされているSDKのバージョンを確認することから始めましょう。"
    ]
   },
   {
@@ -27,13 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "All experiments and associated resources are managed within you Azure ML workspace. You can connect to an existing workspace, or create a new one using the Azure ML SDK.\n",
+    "すべての実験と関連リソースは、Azure MLワークスペース内で管理されます。既存のワークスペースに接続するか、Azure ML SDKを使用して新しいワークスペースを作成できます。\n",
     "\n",
-    "In most cases, you should store the workspace configuration in a JSON configuration file. This makes it easier to reconnect without needing to remember details like your Azure subscription ID. You can download the JSON configuration file from the blade for your workspace in the Azure portal, but if you're using a Compute Instance within your wokspace, the configuration file has already been downloaded to the root folder.\n",
+    "ほとんどの場合、ワークスペース構成をJSON構成ファイルに保存する必要があります。これにより、AzureサブスクリプションIDなどの詳細を覚える必要なく、再接続が簡単になります。 AzureポータルのワークスペースのブレードからJSON構成ファイルをダウンロードできますが、ワークスペース内でコンピューティングインスタンスを使用している場合、構成ファイルは既にルートフォルダーにダウンロードされています。\n",
     "\n",
-    "The code below uses the configuration file to connect to your workspace. The first time you run it in a notebook session, you'll be prompted to sign into Azure by clicking the https://microsoft.com/devicelogin link,  entering an automatically generated code, and signing into Azure. After you have successfully signed in, you can close the browser tab that was opened and return to this notebook."
+    "以下のコードは、構成ファイルを使用してワークスペースに接続します。ノートブックセッションで初めて実行する場合は、https：//microsoft.com/deviceloginリンクをクリックして、自動生成されたコードを入力し、Azureにサインインすることにより、Azureにサインインするように求められます。サインインに成功したら、開いていたブラウザータブを閉じて、このノートブックに戻ることができます。"
    ]
   },
   {
@@ -52,9 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## View Azure ML Resources\n",
+    "## Azure MLリソースを表示する\n",
     "\n",
-    "Now that you have a connection to your workspace, you can view the resources it contains."
+    "ワークスペースへの接続ができたので、そこに含まれるリソースを表示できます。"
    ]
   },
   {
@@ -85,14 +85,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you've seen how to use the Azure ML SDK to view the resources in your workspace. The SDK provides a great way to script the creation and configuration of the resources you need to operate machine learning workloads using Azure ML. For more details, see the [Azure ML SDK documentation](https://docs.microsoft.com/python/api/overview/azure/ml/intro?view=azure-ml-py)."
+    "これで、Azure ML SDKを使用してワークスペースのリソースを表示する方法がわかりました。 SDKは、Azure MLを使用して機械学習ワークロードを操作するために必要なリソースの作成と構成をスクリプト化する優れた方法を提供します。詳細については、[Azure ML SDKドキュメント](https://docs.microsoft.com/python/api/overview/azure/ml/intro?view=azure-ml-py)を参照してください。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the **File** menu, click **Close and Halt** to close this notebook. Then return to the lab instructions."
+    "[**ファイル**]メニューで、[**閉じて停止**]をクリックしてこのノートブックを閉じます。その後、実習ラボの手順に戻ります。"
    ]
   }
  ],
