--- a/02B - Using the Visual Designer.ipynb
+++ b/02B - Using the Visual Designer.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using the Visual Designer\n",
+    "# Visual designerの使用\n",
     "\n",
-    "> **Important**: This exercise assumes you have completed [Lab 2A](labdocs/Lab02A.md) and [Lab 2B](labdocs/Lab02B.md) to create and deploy an inference pipeline as a containerized service.\n",
+    "> **重要**: この演習では、[Lab 2A](labdocs / Lab02A.md)および[Lab 2B](labdocs/Lab02B.md)を完了し、コンテナ化されたサービスとして推論パイプラインを作成および展開していることを前提としています。\n",
     "\n",
-    "Add code to the cell below to test your **predict-diabetes** service."
+    "下のセルにコードを追加して、**predict-diabetes**サービスをテストします。"
    ]
   },
   {
