--- a/03A - Running Experiments.ipynb
+++ b/03A - Running Experiments.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Running Experiments\n",
+    "# 実験の実行\n",
     "\n",
-    "You can use the Azure Machine Learning SDK to run code experiments that log metrics and generate outputs. This is at the core of most machine learning operations in Azure Machine Learning.\n",
+    "Azure Machine Learning SDKを使用して、メトリックを記録して出力を生成するコード実験を実行できます。これは、Azure Machine Learningのほとんどの機械学習操作の中核です。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,9 +33,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run an Experiment\n",
+    "## 実験を行う\n",
     "\n",
-    "One of the most fundamentals tasks that data scientists need to perform is to create and run experiments that process and analyze data. In this exercise, you'll learn how to use an Azure ML *experiment* to run Python code and record values extracted from data. In this case, you'll use a simple dataset that contains details of patients that have been tested for diabetes. You'll run an experiment to explore the data, extracting statistics, visualizations, and data samples. Most of the code you'll use is fairly generic Python, such as you might run in any data exploration process. However, with the addition of a few lines, the code uses an Azure ML *experiment* to log details of the run."
+    "データサイエンティストが実行する必要がある最も基本的なタスクの1つは、データを処理および分析する実験を作成して実行することです。",
+    "この演習では、Azure ML *experiment*を使用してPythonコードを実行し、データから抽出された値を記録する方法を学習します。",
+    "この場合、糖尿病の検査を受けた患者の詳細を含む簡単なデータセットを使用します。",
+    "実験を実行して、データを探索し、統計、視覚化、およびデータサンプルを抽出します。使用するコードのほとんどは、データ探索プロセスで実行できるような、かなり汎用的なPythonです。",
+    "ただし、数行を追加すると、コードはAzure ML *experiment*を使用して実行の詳細をログに記録します。"
    ]
   },
   {
