--- a/03B - Training Models.ipynb
+++ b/03B - Training Models.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training Models\n",
+    "# トレーニングモデル\n",
     "\n",
-    "The central goal of machine learning is to train predictive models that can be used by applications. In Azure Machine Learning,  you can use scripts to train models leveraging common machine learning frameworks like Scikit-Learn, Tensorflow, PyTorch, SparkML, and others. You can run these training scripts as experiments in order to track metrics and outputs - in particular, the trained models.\n",
+    "機械学習の中心的な目標は、アプリケーションで使用できる予測モデルをトレーニングすることです。 Azure Machine Learningでは、スクリプトを使用して、Scikit-Learn、Tensorflow、PyTorch、SparkMLなどの一般的な機械学習フレームワークを活用したモデルをトレーニングできます。これらのトレーニングスクリプトを実験として実行して、メトリックと出力（特に、トレーニングされたモデル）を追跡できます。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Training Script\n",
+    "## トレーニングスクリプトを作成する\n",
     "\n",
-    "You;re going to use a Python script to train a machine learning model based on the diabates data, so let's start by creating a folder for the script and data files."
+    "Pythonスクリプトを使用して、diabatesデータに基づいて機械学習モデルをトレーニングするため、スクリプトとデータファイル用のフォルダーを作成することから始めましょう。"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you're ready to create the training script and save it in the folder."
+    "これで、トレーニングスクリプトを作成してフォルダーに保存する準備ができました。"
    ]
   },
   {
@@ -122,11 +122,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use an Estimator to Run the Script as an Experiment\n",
+    "## 推定器を使用して、実験としてスクリプトを実行する\n",
     "\n",
-    "Previously, you ran experiment scripts using a **RunConfiguration** and a **ScriptRunConfig**. You can use the same approach to run a training script, but using an **Estimator** is generally easier as it abstracts both of these configurations in a single object.\n",
+    "以前は、**RunConfiguration**および**ScriptRunConfig**を使用して実験スクリプトを実行しました。",
+    "同じアプローチを使用してトレーニングスクリプトを実行できますが、**Estimator**を使用すると、これらの両方の構成が1つのオブジェクトに抽象化されるため、一般的に簡単です。\n",
     "\n",
-    "In this case, we'll use a generic **Estimator** object to run the training experiment. Note that the default environment for this estimator does not include the **scikit-learn** package, so you need to explicitly add that to the configuration. The conda environment is built on-demand the first time the estimator is used, and cached for future runs that use the same configuration; so the first run will take a little longer."
+    "この場合、一般的な**Estimator**オブジェクトを使用してトレーニング実験を実行します。",
+    "この推定器のデフォルト環境には**scikit-learn**パッケージが含まれていないため、明示的に構成に追加する必要があることに注意してください。 ",
+    "conda環境は、推定器が初めて使用されるときにオンデマンドで構築され、同じ構成を使用する将来の実行のためにキャッシュされます。そのため、最初の実行には少し時間がかかります。"
    ]
   },
   {
@@ -158,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As with any experiment run, you can use the **RunDetails** widget to view information about the run and get a link to it in Azure Machine Learning studio."
+    "実験の実行と同様に、**RunDetails**ウィジェットを使用して、実行に関する情報を表示し、Azure Machine Learning Studioで実行へのリンクを取得できます。"
    ]
   },
   {
@@ -176,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also retrieve the metrics and outputs from the **Run** object."
+    "**Run**オブジェクトからメトリックと出力を取得することもできます。"
    ]
   },
   {
@@ -198,9 +201,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register the Trained Model\n",
+    "## トレーニング済みモデルを登録する\n",
     "\n",
-    "Note that the outputs of the experiment include the trained model file (**diabetes_model.pkl**). You can register this model in your Azure Machine Learning workspace, making it possible to track model versions and retrieve them later."
+    "実験の出力には、トレーニング済みのモデルファイル（**diabetes_model.pkl**）が含まれていることに注意してください。",
+    "このモデルをAzure Machine Learningワークスペースに登録して、モデルのバージョンを追跡し、後で取得できるようにすることができます。"
    ]
   },
   {
@@ -232,11 +236,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Parameterized Training Script\n",
+    "## パラメーター化されたトレーニングスクリプトを作成する\n",
     "\n",
-    "You can increase the flexibility of your training experiment by adding parameters to your script, enabling you to repeat the same training experiment with different settings. In this case, you'll add a parameter for the regularization rate used by the Logistic Regression algorithm when training the model.\n",
+    "スクリプトにパラメーターを追加することにより、トレーニング実験の柔軟性を向上させることができ、異なる設定で同じトレーニング実験を繰り返すことができます。",
+    "この場合、モデルのトレーニング時にロジスティック回帰アルゴリズムで使用される正則化率のパラメーターを追加します。\n",
     "\n",
-    "Again, lets start by creating a folder for the parameterized script and the training data."
+    "繰り返しますが、パラメーター化されたスクリプトとトレーニングデータ用のフォルダーを作成することから始めましょう。"
    ]
   },
   {
@@ -259,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's create a script containing a parameter for the regularization rate hyperparameter."
+    "次に、正則化率ハイパーパラメーターのパラメーターを含むスクリプトを作成しましょう。"
    ]
   },
   {
@@ -327,9 +332,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use a Framework-Specific Estimator\n",
+    "## フレームワーク固有の見積もりツールを使用する\n",
     "\n",
-    "You used a generic **Estimator** class to run the training script, but you can also take advantage of framework-specific estimators that include environment definitions for common machine learning frameworks. In this case, you're using Scikit-Learn, so you can use the **SKLearn** estimator. This means that you don't need to specify the **scikit-learn** package in the configuration."
+    "汎用**Estimator**クラスを使用してトレーニングスクリプトを実行しましたが、一般的な機械学習フレームワークの環境定義を含むフレームワーク固有の推定器を利用することもできます。",
+    "この場合、Scikit-Learnを使用しているため、**SKLearn**推定器を使用できます。これは、設定で**scikit-learn**パッケージを指定する必要がないことを意味します。"
    ]
   },
   {
@@ -364,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once again, we can get the metrics and outputs from the completed run."
+    "繰り返しますが、完了した実行からメトリックと出力を取得できます。"
    ]
   },
   {
@@ -386,9 +392,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register A New Version of the Model\n",
+    "## モデルの新しいバージョンを登録する\n",
     "\n",
-    "Now that you've trained a new model, you can register it as a new version in the workspace."
+    "新しいモデルをトレーニングしたので、ワークスペースに新しいバージョンとして登録できます。"
    ]
   },
   {
@@ -420,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you've finished exploring, you can close this notebook and shut down your Compute Instance."
+    "探索が終了したら、このノートブックを閉じてコンピューティングインスタンスをシャットダウンできます。"
    ]
   }
  ],
