--- a/04A - Working with Datastores.ipynb
+++ b/04A - Working with Datastores.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with Datastores\n",
+    "# データストアの使用\n",
     "\n",
-    "In previous labs, you connected to an Azure ML workspace and ran a simple experiment based on data in a local CSV file where the experiment script is being run. Now it's time to work with data stored in the cloud.\n",
+    "以前のラボでは、Azure MLワークスペースに接続し、実験スクリプトが実行されているローカルCSVファイルのデータに基づいて簡単な実験を実行しました。ここで、クラウドに保存されたデータを操作します。\n",
     "\n",
-    "> **Important**: The code in this notebooks assumes that you have completed the first two tasks in [Lab 4A](labdocs/Lab04A.md). If you have not done so, go and do it now!\n",
+    "> **重要**: このノートブックのコードは、[Lab 4A](labdocs/Lab04A.md)の最初の2つのタスクを完了していることを前提としています。まだ行っていない場合は、今すぐ行ってください！\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -35,11 +35,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## View Datastores in the Workspace\n",
+    "## ワークスペースでデータストアを表示する\n",
     "\n",
-    "The workspace contains several datastores, including the **aml_data** datastore you ceated in the [previous task](labdocs/Lab04A.md).\n",
+    "ワークスペースには、[前のタスク](labdocs/Lab04A.md)で作成した**aml_data**データストアなど、いくつかのデータストアが含まれています。\n",
     "\n",
-    "Run the following code to retrieve the *default* datastore, and then list all of the datastores indicating which is the default."
+    "次のコードを実行して*default*データストアを取得してから、どのデータストアがデフォルトであるかを示します。"
    ]
   },
   {
@@ -60,9 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get a Datastore to Work With\n",
+    "## 使用するデータストアを取得する\n",
     "\n",
-    "You want to work with the **aml_data** datastore, so you need to get it by name:"
+    "**aml_data**データストアを使用するため、名前で取得する必要があります:"
    ]
   },
   {
@@ -81,9 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set the Default Datastore\n",
+    "## デフォルトのデータストアを設定する\n",
     "\n",
-    "You are primarily going towork with the **aml_data** datastore in this course; so for convenience, you can set it to be the default datastore:"
+    "このコースでは、主に**aml_data**データストアを使用します。便宜上、デフォルトのデータストアになるように設定できます:"
    ]
   },
   {
@@ -101,9 +101,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Upload Data to a Datastore\n",
+    "## データストアへのデータのアップロード\n",
     "\n",
-    "Now that you have identified the datastore you want to work with, you can upload files from your local file system so that they will be accessible to experiments running in the workspace, regardless of where the experiment script is actually being run."
+    "作業するデータストアを特定したので、実験スクリプトが実際に実行されている場所に関係なく、ワークスペースで実行されている実験にアクセスできるように、ローカルファイルシステムからファイルをアップロードできます。"
    ]
   },
   {
@@ -122,13 +122,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train a Model from a Datastore\n",
+    "## データストアからモデルをトレーニングする\n",
     "\n",
-    "When you uploaded the files in the code cell above, note that the code returned a *data reference*. A data reference provides a way to pass the path to a folder in a datastore to a script, regardless of where the script is being run, so that the script can access data in the datastore location.\n",
+    "上記のコードセルにファイルをアップロードすると、コードが*データ参照*を返したことに注意してください。データ参照は、スクリプトがデータストアの場所にあるデータにアクセスできるように、スクリプトの実行場所に関係なく、データストア内のフォルダーへのパスをスクリプトに渡す方法を提供します。\n",
     "\n",
-    "The following code gets a reference to the **diabetes-data** folder where you uploaded the diabetes CSV files, and specifically configures the data reference for *download* - in other words, it can be used to download the contents of the folder to the compute context where the data reference is being used. Downloading data works well for small volumes of data that will be processed on local compute. When working with remote compute, you can also configure a data reference to *mount* the datastore location and read data directly from the data source.\n",
+    "次のコードは、糖尿病CSVファイルをアップロードした**diabetes-data**フォルダーへの参照を取得し、特に*download*のデータ参照を構成します。",
+    "つまり、フォルダーの内容をダウンロードするために使用できます。データ参照が使用されている計算コンテキストへ。",
+    "データのダウンロードは、ローカルコンピューティングで処理される少量のデータに適しています。",
+    "リモートコンピューティングを使用する場合、データストアの場所を*マウント*するようにデータ参照を構成し、データソースから直接データを読み取ることもできます。\n",
     "\n",
-    "> **More Information**: For more details about using datastores, see the [Azure ML documentation](https://docs.microsoft.com/azure/machine-learning/how-to-access-data)."
+    "> **詳しくは**: データストアの使用の詳細については、[Azure MLドキュメント](https://docs.microsoft.com/azure/machine-learning/how-to-access-data)を参照してください。"
    ]
   },
   {
@@ -145,10 +148,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To use the data reference in a training script, you must define a parameter for it. Run the following two code cells to create:\n",
+    "トレーニングスクリプトでデータ参照を使用するには、そのパラメーターを定義する必要があります。次の2つのコードセルを実行して作成します:\n",
     "\n",
-    "1. A folder named **diabetes_training_from_datastore**\n",
-    "2. A script that trains a classification model by using the training data in all of the CSV files in the folder referenced by the data reference parameter passed to it."
+    "1. **diabetes_training_from_datastore**という名前のフォルダー\n",
+    "2. 渡されたデータ参照パラメーターによって参照されるフォルダー内のすべてのCSVファイルのトレーニングデータを使用して、分類モデルをトレーニングするスクリプト。"
    ]
   },
   {
@@ -235,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The script will load the training data from the data reference passed to it as a parameter, so now you just need to set up the script parameters to pass the file reference when we run the experiment."
+    "スクリプトは、パラメータとして渡されたデータ参照からトレーニングデータをロードするため、実験を実行するときにスクリプトパラメータを設定してファイル参照を渡すだけで済みます。"
    ]
   },
   {
@@ -277,11 +280,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first time the experiment is run, it may take some time to set up the Python environment - subsequent runs will be quicker.\n",
+    "実験を初めて実行するときは、Python環境のセットアップに時間がかかる場合があります-以降の実行はより高速になります。\n",
     "\n",
-    "When the experiment has completed, in the widget, view the **azureml-logs/70_driver_log.txt** output log to verify that the data files were downloaded.\n",
+    "実験が完了したら、ウィジェットで**azureml-logs/70_driver_log.txt**出力ログを表示して、データファイルがダウンロードされたことを確認します。\n",
     "\n",
-    "As with all experiments, you can view the details of the experiment run in [Azure ML studio](https://ml.azure.com), and you can write code to retrieve the metrics and files generated:"
+    "すべての実験と同様に、[Azure ML studio](https://ml.azure.com)で実験の詳細を表示し、生成されたメトリックとファイルを取得するコードを作成できます。:"
    ]
   },
   {
@@ -303,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once again, you can register the model that was trained by the experiment."
+    "ここでも、実験によって訓練されたモデルを登録できます。"
    ]
   },
   {
@@ -335,9 +338,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this exercise, you've explored some options for working with data in the form of *datastores*.\n",
+    "この演習では、*datastore*の形式でデータを操作するためのいくつかのオプションを検討しました。\n",
     "\n",
-    "Azure Machine Learning offers a further level of abstraction for data in the form of *datasets*, which you'll explore next."
+    "Azure Machine Learningは、*datasets*の形式でデータの抽象化をさらに強化します。これについては、次に説明します。"
    ]
   }
  ],
