--- a/04B - Working with Datasets.ipynb
+++ b/04B - Working with Datasets.ipynb
@@ -4,15 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with Datasets\n",
+    "# データセットの使用\n",
     "\n",
-    "In the previous labs, you used a *datastore* to provide centralized, cloud-based data access. In this lab, you'll explore *datasets*, a further abstraction that makes it easier to work with specific data for experiments and training.\n",
+    "前のラボでは、*datastore*を使用して、クラウドベースの集中データアクセスを提供していました。このラボでは、*datasets*を探索します。",
+    "これは、実験とトレーニングのために特定のデータを簡単に操作できるようにするさらなる抽象化です。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,11 +34,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare Data\n",
+    "## データを準備する\n",
     "\n",
-    "In the previous lab, you created a datastore. Datasets are usually (though not always) based on data in datastores.\n",
+    "前のラボでは、データストアを作成しました。データセットは通常（常にではありませんが）データストア内のデータに基づいています。\n",
     "\n",
-    "If you did not complete the previous lab, run the following code to upload two local CSV files to the default datastore in your workspace (if you *did* complete the previous lab, this will just overwrite the same files)."
+    "前のラボを完了していない場合は、次のコードを実行して、2つのローカルCSVファイルをワークスペースのデフォルトのデータストアにアップロードします（前のラボを*完了*した場合、同じファイルが上書きされます）。"
    ]
   },
   {
@@ -56,9 +57,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Tabular Dataset\n",
+    "## 表形式のデータセットを作成する\n",
     "\n",
-    "A dataset is an object that encapsulates a specific data source. Let's create a dataset from the diabetes data you uploaded to the datastore, and view the first 20 records. In this case, the data is in a structured format in a CSV file, so we'll use a *Tabular* dataset."
+    "データセットは、特定のデータソースをカプセル化するオブジェクトです。データストアにアップロードした糖尿病データからデータセットを作成し、最初の20レコードを表示してみましょう。",
+    "この場合、データはCSVファイルの構造化された形式であるため、*Tabular*データセットを使用します。"
    ]
   },
   {
@@ -83,11 +85,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see in the code above, it's easy to convert a tabular dataset to a Pandas dataframe, enabling you to work with the data using common python techniques.\n",
+    "上記のコードを見るとわかるように、表形式のデータセットをPandasデータフレームに簡単に変換でき、一般的なpythonテクニックを使用してデータを操作できます。\n",
     "\n",
-    "## Create a File Dataset\n",
+    "## ファイルデータセットを作成する\n",
     "\n",
-    "The dataset you created is a *tabular* dataset that can be read as a dataframe containing all of the data in the structured files that are included in the dataset definition. This works well for tabular data, but in some machine learning scenarios you might need to work with data that is unstructured; or you may simply want to handle reading the data from files in your own code. To accomplish this, you can use a *file* dataset, which creates a list of file paths in a virtual mount point, which you can use to read the data in the files."
+    "作成したデータセットは、表形式のデータセットであり、データセット定義に含まれる構造化ファイルのすべてのデータを含むデータフレームとして読み取ることができます。",
+    "これは表形式のデータではうまく機能しますが、一部の機械学習シナリオでは、構造化されていないデータを使用する必要がある場合があります。",
+    "または、独自のコード内のファイルからデータの読み取りを処理することもできます。これを実現するには、*file*データセットを使用します。",
+    "これにより、仮想マウントポイントにファイルパスのリストが作成され、ファイル内のデータを読み取ることができます。"
    ]
   },
   {
@@ -108,11 +113,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register Datasets\n",
+    "## データセットの登録\n",
     "\n",
-    "Now that you have created datasets that reference the diabetes data, you can register them to make them easily accessible to any experiment being run in the workspace.\n",
+    "糖尿病データを参照するデータセットを作成したので、それらを登録して、ワークスペースで実行されている実験に簡単にアクセスできるようにすることができます。\n",
     "\n",
-    "We'll register the tabular dataset as **diabetes dataset**, and the file dataset as **diabetes files**."
+    "テーブルデータセットを**diabetes datasets**として、ファイルデータセットを**diabetes file**として登録します。"
    ]
   },
   {
@@ -142,7 +147,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can view and manage datasets on the **Datasets** page for your workspace in [Azure ML Studio](https://ml.azure.com). You cal also get a list of datasets from the workspace object:"
+    "[Azure ML Studio](https://ml.azure.com)のワークスペースの**Datasets**ページでデータセットを表示および管理できます。",
+    "また、ワークスペースオブジェクトからデータセットのリストを取得できます。:"
    ]
   },
   {
@@ -161,7 +167,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you completed Labs 2A and 2B, you will see that registered datasets include transformations created using the visual Designer tool. You may also notice that in registering **diabetes dataset** with the same name as the dataset you created using the *Studio* interface in a previous exercise, you are creating a new *version* of the dataset. The ability to version datasets enables you to redefine datasets without breaking existing experiments or pipelines that rely on previous definitions. By default, the latest version of a named dataset is returned, but you can retrieve a specific version of a dataset by specifying the version number, like this:\n",
+    "Labs 2Aおよび2Bを完了すると、登録されたデータセットにビジュアルデザイナーツールを使用して作成された変換が含まれていることがわかります。",
+    "また、前の演習で*Studio*インターフェイスを使用して作成したデータセットと同じ名前で**diabetes datasets**を登録すると、データセットの新しい*バージョン*が作成されることに気付くかもしれません。",
+    "データセットをバージョン管理する機能により、以前の定義に依存する既存の実験またはパイプラインを壊すことなく、データセットを再定義できます。",
+    "デフォルトでは、名前付きデータセットの最新バージョンが返されますが、次のようにバージョン番号を指定することで、データセットの特定のバージョンを取得できます:\n",
     "\n",
     "```python\n",
     "dataset_v1 = Dataset.get_by_name(ws, 'diabetes dataset', version = 1)\n",
@@ -173,14 +182,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Train a Model from a Tabular Dataset\n",
+    "## 表形式のデータセットからモデルをトレーニングする\n",
     "\n",
-    "Now that you have datasets, you're ready to start training models from them. You can pass datasets to scripts as *inputs* in the estimator being used to run the script.\n",
+    "データセットができたので、データセットからトレーニングモデルを開始する準備ができました。データセットを、スクリプトの実行に使用されている推定器の*inputs*としてスクリプトに渡すことができます。\n",
     "\n",
-    "Run the following two code cells to create:\n",
+    "次の2つのコードセルを実行して作成します:\n",
     "\n",
-    "1. A folder named **diabetes_training_from_tab_dataset**\n",
-    "2. A script that trains a classification model by using a tabular dataset that is passed to is as an *input*."
+    "1. **diabetes_training_from_tab_dataset**という名前のフォルダー\n",
+    "2. 渡される表形式のデータセットを使用して分類モデルをトレーニングするスクリプトは、*input*としてです。"
    ]
   },
   {
@@ -262,9 +271,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can create an estimator to run the script, and define a named *input* for the training dataset, which is read by the script.\n",
+    "これで、スクリプトを実行する推定器を作成し、スクリプトによって読み取られるトレーニングデータセットの名前付き*input*を定義できます。\n",
     "\n",
-    "> **Note**: The **Dataset** class is defined in the **azureml-dataprep** package (which is installed with the SDK), and this package includes optional support for **pandas** (which is used by the **to_pandas_dataframe()** method, so you need to include this package in the environment where the training experiment will be run."
+    "> **Note**: **Dataset**クラスは**azureml-dataprep**パッケージ（SDKと共にインストールされます）で定義され、このパッケージには**pandas**(**to_pandas_dataframe()**)メソッド。そのため、トレーニングパッケージを実行する環境にこのパッケージを含める必要があります。"
    ]
   },
   {
@@ -310,11 +319,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first time the experiment is run, it may take some time to set up the Python environment - subsequent runs will be quicker.\n",
+    "実験を初めて実行するときは、Python環境のセットアップに時間がかかる場合があります-以降の実行はより高速になります。\n",
     "\n",
-    "When the experiment has completed, in the widget, view the **azureml-logs/70_driver_log.txt** output log and the metrics generated by the run.\n",
+    "実験が完了したら、ウィジェットで**azureml-logs/70_driver_log.txt**出力ログと実行によって生成されたメトリックを表示します。\n",
     "\n",
-    "As with all experiments, you can view the details of the experiment run in [Azure ML Studio](https://ml.azure.com), and you can write code to retrieve the metrics and files generated:"
+    "すべての実験と同様に、[Azure ML Studio](https://ml.azure.com)で実験の詳細を表示でき、生成されたメトリックとファイルを取得するコードを作成できます。:"
    ]
   },
   {
@@ -336,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model we trained is saved as the **diabetes_model.pkl** file in the **outputs** folder, so you can register it."
+    "トレーニングしたモデルは**diabetes_model.pkl**ファイルとして**outputs**フォルダーに保存されるため、登録できます。"
    ]
   },
   {
@@ -365,16 +374,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train a Model from a File Dataset\n",
+    "## ファイルデータセットからモデルをトレーニングする\n",
     "\n",
-    "You've seen how to train a model using training data in a *tabular* dataset; but what about a *file* dataset?\n",
+    "*表*データセットのトレーニングデータを使用してモデルをトレーニングする方法を見てきました。しかし、*file*データセットはどうですか？\n",
     "\n",
-    "When you;re using a file dataset, the dataset input passed to the script represents a mount point containing file paths. How you read the data from these files depends on the kind of data in the files and what you want to do with it. In the case of the diabetes CSV files, you can use the Python **glob** module to create a list of files in the virtual mount point defined by the dataset, and read them all into Pandas dataframes that are concatenated into a single dataframe.\n",
+    "ファイルデータセットを使用している場合、スクリプトに渡されるデータセット入力は、ファイルパスを含むマウントポイントを表します。",
+    "これらのファイルからデータを読み取る方法は、ファイル内のデータの種類とそれをどうするかによって異なります。",
+    "糖尿病CSVファイルの場合、Python **glob**モジュールを使用して、データセットによって定義された仮想マウントポイントにファイルのリストを作成し、"
+    ,"それらをすべて単一のデータフレームに連結されたPandasデータフレームに読み込むことができます。\n",
     "\n",
-    "Run the following two code cells to create:\n",
+    "次の2つのコードセルを実行して作成します:\n",
     "\n",
-    "1. A folder named **diabetes_training_from_file_dataset**\n",
-    "2. A script that trains a classification model by using a file dataset that is passed to is as an *input*."
+    "1. **diabetes_training_from_file_dataset**という名前のフォルダー\n",
+    "2. 渡されるファイルデータセットを使用して分類モデルをトレーニングするスクリプトは、*input*です。"
    ]
   },
   {
@@ -459,9 +471,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we need to change the way we pass the dataset to the estimator - it needs to define a mount point from which the script can read the files. For large volumes of data, you'd generally use the **as_mount** method to stream the files directly from the dataset source; but when running on local compute (as we are in this example), you need to use the **as_download** option to download the dataset files to a local folder.\n",
+    "次に、データセットを推定器に渡す方法を変更する必要があります。スクリプトがファイルを読み取ることができるマウントポイントを定義する必要があります。",
+    "大量のデータの場合、通常は**as_mount**メソッドを使用して、データセットソースから直接ファイルをストリーミングします。",
+    "ただし、この例のようにローカルコンピューティングで実行する場合は、**as_download**オプションを使用して、データセットファイルをローカルフォルダーにダウンロードする必要があります。\n",
     "\n",
-    "Also, since the **Dataset** class is defined in the **azureml-dataprep** package, we need to include that in the experiment environment."
+    "また、**Dataset**クラスは**azureml-dataprep**パッケージで定義されているため、実験環境に含める必要があります。"
    ]
   },
   {
@@ -509,9 +523,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When the experiment has completed, in the widget, view the **azureml-logs/70_driver_log.txt** output log to verify that the file dataset was processed and the data files downloaded.\n",
+    "実験が完了したら、ウィジェットで**azureml-logs/70_driver_log.txt**出力ログを表示して、ファイルデータセットが処理され、データファイルがダウンロードされたことを確認します。\n",
     "\n",
-    "As with all experiments, you can view the details of the experiment run in [Azure ML Studio](https://ml.azure.com), and you can write code to retrieve the metrics and files generated:"
+    "すべての実験と同様に、[Azure ML Studio](https://ml.azure.com)で実験の詳細を表示でき、生成されたメトリックとファイルを取得するコードを作成できます。:"
    ]
   },
   {
@@ -533,7 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once again, let's register the model that we trained."
+    "もう一度、訓練したモデルを登録しましょう。"
    ]
   },
   {
@@ -562,7 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **More Information**: For more information about training with datasets, see [Training with Datasets](https://docs.microsoft.com/azure/machine-learning/how-to-train-with-datasets) in the Azure ML documentation."
+    "> **詳しくは**: データセットを使用したトレーニングの詳細については、Azure MLドキュメントの[データセットを使用したトレーニング](https://docs.microsoft.com/azure/machine-learning/how-to-train-with-datasets)を参照してください。"
    ]
   }
  ],
