--- a/05A - Working with Environments.ipynb
+++ b/05A - Working with Environments.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with Environments\n",
+    "# 環境について\n",
     "\n",
-    "By now you've run many experiments in your Azure Machine Learning workspace, and in some cases you've had to specify the particular Python packages required in the environment where the experiment code is run. In this lab, you'll explore environments in a little more detail.\n",
+    "これまでに、Azure Machine Learningワークスペースで多くの実験を実行し、場合によっては、実験コードを実行する環境で必要な特定のPythonパッケージを指定する必要がありました。このラボでは、環境をもう少し詳しく見ていきます。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare Data for an Experiment\n",
+    "## 実験用のデータを準備する\n",
     "\n",
-    "In this lab, you'll use a dataset containing details of diabetes patients. Run the cell below to create this dataset (if you created it in the previous lab, the code will create a new version)"
+    "このラボでは、糖尿病患者の詳細を含むデータセットを使用します。以下のセルを実行して、このデータセットを作成します（以前のラボで作成した場合、コードは新しいバージョンを作成します）"
    ]
   },
   {
@@ -69,11 +69,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Training Script\n",
+    "## トレーニングスクリプトを作成する\n",
     "\n",
-    "Run the following two cells to create:\n",
-    "1. A folder for a new experiment\n",
-    "2. An training script file that uses **scikit-learn** to train a model and **matplotlib** to plot a ROC curve."
+    "次の2つを実行して作成します:\n",
+    "1. 新しい実験用のフォルダー\n",
+    "2. **scikit-learn**を使用してモデルをトレーニングし、**matplotlib**を使用してROC曲線をプロットするトレーニングスクリプトファイル."
    ]
   },
   {
@@ -169,11 +169,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define an Environment\n",
+    "## 環境を定義する\n",
     "\n",
-    "When you run a Python script as an experiment in Azure Machine Learning, a Conda environment is created to define the execution context for the script. Azure Machine Learning provides a default environment that includes many common packages; including the **azureml-defaults** package that contains the libraries necessary for working with an experiment run, as well as popular packages like **pandas** and **numpy**.\n",
+    "Azure Machine Learningで実験としてPythonスクリプトを実行すると、スクリプトの実行コンテキストを定義するConda環境が作成されます。 Azure Machine Learningは、多くの一般的なパッケージを含むデフォルト環境を提供します。実験の実行に必要なライブラリを含む**azureml-defaults**パッケージ、および**pandas**や**numpy**などの一般的なパッケージが含まれます。\n",
     "\n",
-    "You can also define your own environment and add packages by using **conda** or **pip**, to ensure your experiment has access to all the libraries it requires. "
+    "また、**conda**または**pip**を使用して独自の環境を定義し、パッケージを追加して、実験で必要なすべてのライブラリにアクセスできるようにすることもできます。 "
    ]
   },
   {
@@ -204,9 +204,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can use the environment for the experiment by assigning it to an Estimator (or RunConfig).\n",
+    "これで、Estimator（またはRunConfig）に割り当てることで、実験に環境を使用できます。\n",
     "\n",
-    "The following code assigns the environment you created to a generic estimator, and submits an experiment. As the experiment runs, observe the run details in the widget and in the **azureml_logs/60_control_log.txt** output log, you'll see the conda environment being built."
+    "次のコードは、作成した環境を汎用推定器に割り当て、実験を送信します。実験の実行中に、ウィジェットおよび**azureml_logs/60_control_log.txt**出力ログで実行の詳細を確認すると、conda環境が構築されていることがわかります。"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The experiment successfully used the environment, which included all of the packages it required - you can view the metrics and outputs from the experiment run in Azure Machine Learning Studio, or by running the code below - including the model trained using **scikit-learn** and the ROC chart image generated using **matplotlib**."
+    "実験では、必要なすべてのパッケージを含む環境が正常に使用されました。AzureMachine Learning Studioで実験を実行するか、**scikit-learn**を使用して訓練されたモデルを含む以下のコードを実行することで、メトリックと出力を表示できます。および**matplotlib**を使用して生成されたROCチャート画像。"
    ]
   },
   {
@@ -271,9 +271,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register the Environment\n",
+    "## 環境を登録する\n",
     "\n",
-    "Having gone to the trouble of defining an environment with the packages you need, you can register it in the workspace."
+    "必要なパッケージを使用して環境を定義する手間がかかったら、ワークスペースに登録できます。"
    ]
   },
   {
@@ -290,9 +290,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the environment is registered with the name you assigned when you first created it (in this case, *diabetes-experiment-env*).\n",
+    "環境は、最初に作成したときに割り当てた名前で登録されることに注意してください（この場合、*diabetes-experiment-env*）。\n",
     "\n",
-    "With the environment registered, you can reuse it for any scripts that have the same requirements. For example, let's create a folder and script to train a diabetes model using a different algorithm:"
+    "環境を登録すると、同じ要件を持つスクリプトに再利用できます。たとえば、別のアルゴリズムを使用して糖尿病モデルをトレーニングするためのフォルダーとスクリプトを作成しましょう:"
    ]
   },
   {
@@ -380,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can retrieve the registered environment and use it to configure the estimator for a new experiment that runs the alternative training script (there are no script parameters this time because a Decision Tree classifier doesn't require any hyperparameter values)."
+    "これで、登録済みの環境を取得し、それを使用して代替トレーニングスクリプトを実行する新しい実験の推定器を構成できます（決定ツリー分類子にはハイパーパラメーター値が必要ないため、今回はスクリプトパラメーターはありません）。"
    ]
   },
   {
@@ -419,9 +419,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This time the experiment runs more quickly because a matching environment has been cached from the previous run, so it doesn't need to be recreated on the local compute. However, even on a different compute target, the same environment would be created and used - ensuring consistency for your experiment script execution context.\n",
+    "今回は、前回の実行から一致する環境がキャッシュされているため、実験がより迅速に実行されます。したがって、ローカルコンピューティングで再作成する必要はありません。ただし、異なるコンピューティングターゲット上でも同じ環境が作成および使用され、実験スクリプトの実行コンテキストの一貫性が確保されます。\n",
     "\n",
-    "Let's look at the metrics and outputs from the experiment."
+    "実験のメトリックと出力を見てみましょう。"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It looks like this model is slightly better than the logistic regression model, so let's register it."
+    "このモデルはロジスティック回帰モデルよりもわずかに優れているように見えるので、登録しましょう。"
    ]
   },
   {
@@ -472,9 +472,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## View Registered Environments\n",
+    "## 登録済み環境を表示する\n",
     "\n",
-    "In addition to registering your own environments, you can leverage pre-built \"curated\" environments for common experiment types. The following code lists all registered environments:"
+    "独自の環境を登録することに加えて、一般的な実験タイプに事前に構築された「キュレートされた」環境を活用できます。次のコードは、登録されているすべての環境をリストします:"
    ]
   },
   {
@@ -496,9 +496,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All curated environments have names that begin ***AzureML-*** (you can't use this prefix for your own environments).\n",
+    "すべてのキュレーションされた環境には、**AzureML-**で始まる名前が付いています（独自の環境にこのプレフィックスを使用することはできません）。\n",
     "\n",
-    "Let's explore the curated environments in more depth and see what packages are included in each of them."
+    "キュレーションされた環境をさらに詳しく調べて、それぞれに含まれるパッケージを確認しましょう。"
    ]
   },
   {
@@ -519,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **More Information**: For more information about environments in Azure Machine Learning, see [the Azure Machine Learning documentation](https://docs.microsoft.com/azure/machine-learning/how-to-use-environments)"
+    "> **詳しくは**: Azure Machine Learningの環境の詳細については、[Azure Machine Learning documentation](https://docs.microsoft.com/azure/machine-learning/how-to-use-environments)を参照してください"
    ]
   }
  ],
