--- a/05B - Working with Compute Targets.ipynb
+++ b/05B - Working with Compute Targets.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with Compute Targets\n",
+    "# 計算ターゲットの使用\n",
     "\n",
-    "You've used the Azure Machine Learning SDK to run many experiments, all of them on your local compute (in this case, the Azure Machine Learning notebook VM). Now it's time to see how you can leverage cloud computing to increase the scalability of your compute contexts.\n",
+    "Azure Machine Learning SDKを使用して多くの実験を実行しましたが、それらはすべてローカルコンピューティング（この場合はAzure Machine LearningノートブックVM）で実行されました。次に、クラウドコンピューティングを活用して、コンピューティングコンテキストのスケーラビリティを向上させる方法を確認します。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare Data for an Experiment\n",
+    "## 実験用のデータを準備する\n",
     "\n",
-    "In this lab, you'll use a dataset containing details of diabetes patients. Run the cell below to create this dataset (if you created it in the previous lab, the code will create a new version)"
+    "このラボでは、糖尿病患者の詳細を含むデータセットを使用します。以下のセルを実行して、このデータセットを作成します（以前のラボで作成した場合、コードは新しいバージョンを作成します）"
    ]
   },
   {
@@ -69,11 +69,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Compute Target\n",
+    "## 計算ターゲットを作成する\n",
     "\n",
-    "In many cases, your local compute resources may not be sufficient to process a complex or long-running experiment that needs to process a large volume of data; and you may want to take advantage of the ability to dynamically create and use compute resources in the cloud.\n",
+    "多くの場合、ローカルのコンピューティングリソースでは、大量のデータを処理する必要がある複雑な実験や長時間実行する実験を処理するには不十分な場合があります。また、クラウドでコンピューティングリソースを動的に作成して使用する機能を活用することもできます。\n",
     "\n",
-    "Azure ML supports a range of compute targets, which you can define in your workpace and use to run experiments; paying for the resources only when using them. When you set up the workspace in the first exercise, you created a training cluster called **aml-cluster**, so let's verify that exists (and if not, create it) so we can use it to run training experiments."
+    "Azure MLは、さまざまな計算ターゲットをサポートしています。これらのターゲットは、ワークスペースで定義し、実験の実行に使用できます。リソースの使用時にのみリソースの支払いを行います。最初の演習でワークスペースをセットアップしたときに、** aml-cluster **というトレーニングクラスターを作成したので、それを使用してトレーニング実験を実行できるように、存在することを確認します（そうでない場合は作成します）。"
    ]
   },
   {
@@ -103,9 +103,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run an Experiment on Remote Compute\n",
+    "## リモートコンピュートで実験を実行する\n",
     "\n",
-    "Now that you have created your compute, you can use it to run experiments. The following code creates a folder for experiment files (which may already exist from the previous lab, but run it anyway!)"
+    "コンピューティングを作成したので、それを使用して実験を実行できます。次のコードは、実験ファイル用のフォルダーを作成します（以前のラボから既に存在している可能性がありますが、とにかく実行してください！）"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, create the Python script file for the experiment. This will overwrite the script you used in the previous lab."
+    "次に、実験用のPythonスクリプトファイルを作成します。これにより、前の実習で使用したスクリプトが上書きされます。"
    ]
   },
   {
@@ -200,9 +200,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you're ready to run the experiment on the compute you created. \n",
+    "これで、作成したコンピューティングで実験を実行する準備が整いました。 \n",
     "\n",
-    "> **Note**: The experiment will take quite a lot longer because a container image must be built with the conda environment, and then the cluster nodes must be started and the image deployed before the script can be run. For a simple experiment like the diabetes training script, this may seem inefficient; but imagine you needed to run a more complex experiment that takes several hours - dynamically creating more scalable compute may reduce the overall time significantly."
+    "> **Note**: コンテナイメージをconda環境で構築し、クラスターノードを起動し、スクリプトを実行する前にイメージをデプロイする必要があるため、実験にはかなり長い時間がかかります。糖尿病のトレーニングスクリプトのような単純な実験では、これは非効率的に見えるかもしれません。しかし、数時間かかるより複雑な実験を実行する必要があると想像してください-よりスケーラブルな計算を動的に作成すると、全体の時間が大幅に短縮される可能性があります。"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While you're waiting for the experiment to run, you can check on the status of the compute in the widget above or in [Azure Machine Learning studio](https://ml.azure.com). You can also check the status of the compute using the code below. Note that it will take a while before the status changes from *steady* to *resizing* (now might be a good time to take a coffee break!)"
+    "実験の実行を待っている間に、上記のウィジェットまたは[Azure Machine Learning studio](https://ml.azure.com)で計算のステータスを確認できます。以下のコードを使用して、コンピューティングのステータスを確認することもできます。ステータスが*定常*から*サイズ変更*に変わるまでにはしばらく時間がかかることに注意してください（今はコーヒーブレイクを取るのに良い時間かもしれません！）"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After the experiment has finished, you can get the metrics and files generated by the experiment run. This time, the files will include logs for building the image and managing the compute."
+    "実験が終了すると、実験の実行によって生成されたメトリックとファイルを取得できます。今回は、ファイルにはイメージの構築とコンピューティングの管理のためのログが含まれます。"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can register the model that was trained by the experiment."
+    "これで、実験によって訓練されたモデルを登録できます。"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">**More Information**: For more information about compute targets in Azure Machine Learning, see the [documentation](https://docs.microsoft.com/azure/machine-learning/concept-compute-target)."
+    ">**詳しくは**: Azure Machine Learningの計算ターゲットの詳細については、[ドキュメント](https://docs.microsoft.com/azure/machine-learning/concept-compute-target)を参照してください。"
    ]
   }
  ],
